[package]
name = "chronokey-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chronokey"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chronokey-core = { path = "../chronokey-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "env-filter"] }
aes-gcm = "0.10.1"
sha2 = "0.10"
rand = { version = "0.8", features = ["std", "std_rng"] }
