[package]
name = "chronokey-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
chronokey-web = { path = "../chronokey-web" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta.18", features = [] }
tauri-plugin-opener = "2.0.0"
tokio = { version = "1", features = ["full"] }

[features]
