[package]
name = "chronokey-issuer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
chronokey-core = { path = "../chronokey-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
anyhow = "1.0"
thiserror = "1.0"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
base64 = { version = "0.21", default-features = false, features = ["std"] }
tempfile = "3"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
curve25519-dalek = { version = "3", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
