[package]
name = "chronokey-web"
version = "0.1.0"
edition = "2021"

[dependencies]
chronokey-core = { path = "../chronokey-core" }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tera = "1.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["fs"] }
